test/neg/neg-rget2.errc
RMA operations only work on TriviallySerializable types
